# SixboxWebServer

./: .env.example  .gitignore  README.md  main.py  main.spec  pyproject.toml  test.py
config/: config.json
core/: env.py
core/config/: __init__.py  config.py
core/database/: __init__.py
core/database/table/: __init__.py  audio.py  audio_set.py  session.py  storage.py  table_base.py  user.py
core/database/view/: audio_view.py  common_view.py  session_view.py  storage_view.py  user_view.py  view_utils.py
core/helpers/: exception.py  file.py  lock.py  route.py  validate.py
core/log/: log.py
core/server/: app.py
core/server/helpers/: __init__.py  route.py
core/server/route/: audio_bp.py  cover_bp.py  helpers.py  page_bp.py  session_bp.py  static_bp.py  storage_bp.py  user_bp.py
core/server/template/: template.py
sources/api/: SixBoxRebuild.postman_collection.json
sources/locale/: messages.pot
sources/locale/zh_CN/LC_MESSAGES/: messages.mo  messages.po
sources/static/css/: default.css  theme.css
sources/static/css/component/: background.css  cover.css  cover_container.css  form_ui.css  logo.css  navigation.css  page_select.css  popup_base.css  popup_message.css  sidebar.css  (+1 more)
sources/templates/base/: page_navigation_base.jinja2
sources/templates/component/: page_base.html  page_base.jinja2  page_navigation_base.jinja2  popup_message.html  ui_components.jinja2  ui_forms.jinja2  ui_navigation.jinja2  ui_page_select.jinja2  ui_popup_base.jinja2  ui_popup_float.jinja2  ui_popup_image.jinja2  ui_popup_no_padding.jinja2  ui_popup_video.jinja2  ui_sidebars.jinja2  ui_storage.jinja2
sources/templates/page/: login.html  music.html  storage.html
support/: clear_generate.py  pyinstaller_setup.py  update_lang.py
(+71 files in other folders)
